# stalnoycontur

./: .env.development  .env.example  .env.production  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260510_0001_initial.py  20260511_0002_add_lead_size.py  20260511_0003_seed_public_content.py  20260511_0004_update_public_contact_settings.py  20260511_0005_add_lead_telegram_status.py  20260511_0006_add_public_phones_setting.py  20260512_0007_add_gallery_items.py  20260516_0008_add_public_avito_setting.py  20260516_0009_add_landing_page_contents.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  admin.py  content.py  lead.py  upload.py
backend/app/core/: admin_auth.py  config.py  rate_limit.py  security.py
backend/app/models/: __init__.py  case.py  faq.py  gallery_item.py  landing_page_content.py  lead.py  review.py  setting.py  upload.py
backend/app/schemas/: __init__.py  case.py  content.py  faq.py  gallery_item.py  landing_page.py  lead.py  review.py  setting.py  upload.py
backend/app/services/: content.py  telegram.py  upload.py
backend/tests/: test_admin_settings.py  test_lead_multipart.py  test_rate_limit.py  test_telegram.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  (+1 more)
nginx/: default.conf
(+47 files in other folders)
