[project]
name = "stalnoycontur-backend"
version = "0.1.0"
description = "FastAPI backend for Stalnoy Contur"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9,<1.0",
]

[tool.uvicorn]
factory = false
